100vh to ensure we always match up the document size to the screensize. Only jump when we surpassed the screen height

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body
   margin: 0;
   display: flex;
   min-width: 320px;
-  min-height: 90vh;
+  min-height: 100vh;
 }
 
 h1
